Enable OOP-D by default on mac again.

Originally reverted for failing web tests. Mark some some web_tests that
were timing out 10.13 as slow.

For virtual/video-surface-layer/media/controls/modern/scrubbing.html
disable the test on mac. This test case times out even when marked as
slow. There are two other variations of the same test disabled on mac,
so this seems like a pre-existing problem.

Bug: 914981
Change-Id: Ib0690f5fedf67d9e7736fdbada95a2aa9e73664d
Reviewed-on: https://chromium-review.googlesource.com/c/1382634
Commit-Queue: kylechar <kylechar@chromium.org>
Reviewed-by: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617828}
Former-commit-id: 2fddbbf41249123377a3c1bcad854e35263f59d1